force-app/main/default/objects/AccountSync_Field_Mapping__mdt/AccountSync_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Defines the mapping configuration for Account fields between APAL and VMAP organizations. Only fields specified in this mapping will be considered for synchronization.</description>
    <label>AccountSync Field Mapping</label>
    <pluralLabel>AccountSync Field Mappings</pluralLabel>
</CustomObject>