force-app/main/default/objects/AccountSync_Field_Mapping__mdt/fields/APAL_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>APAL_Field_API_Name__c</fullName>
    <description>The API name of the Account field in the APAL org that will be mapped for synchronization.</description>
    <inlineHelpText>The API name of the corresponding Account field in the APAL org that will receive synchronized data from the VMAP org.</inlineHelpText>
    <label>APAL Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>