force-app/main/default/objects/AccountSync_Field_Mapping__mdt/fields/Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Value__c</fullName>
    <description>Specifies the default value for the mapped field in case the incoming data does not contain a value. This ensures data consistency and prevents null values during synchronization.</description>
    <label>Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>