force-app/main/default/objects/AccountSync_Field_Mapping__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether this field mapping is active for synchronization. If set to true, this mapping will be used.</description>
    <inlineHelpText>Determines whether this field mapping is active. If enabled, this mapping will be used during synchronization. If disabled, this field will be ignored.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>