force-app/main/default/objects/AccountSync_Field_Mapping__mdt/fields/VMAP_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>VMAP_Field_API_Name__c</fullName>
    <description>The API name of the Account field in the VMAP org that will be mapped for synchronization.</description>
    <inlineHelpText>The API name of the corresponding Account field in the VMAP org that will send data to the APAL org during synchronization.</inlineHelpText>
    <label>VMAP Field API Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>